Fixed Layout Problems

--- a/templates/static/css/Google-Style-Login.css
+++ b/templates/static/css/Google-Style-Login.css
@@ -3,7 +3,7 @@
     padding: 90px 5px;
     background-color: rgba(45,152,98,.5);
     margin: 0 auto 1px;
-    margin-top: 1px;
+    margin-top: -40px;
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
